post examples added
