# lib/router/router.js
@@ -98,13 +98,16 @@ router.get('/api/tasks/:taskID', getTaskById)
  *          properties:
  *            done:
  *              type: boolean
- *              example: task 1
+ *              example: false
  *            description:
  *              type: string
- *              assignee:
- *                type: string
+ *              example: task 1
+ *            assignee:
+ *              type: string
+ *              example: Faezeh
  *            imgUrl:
  *              type: string
+ *              example: ../public/assets/pictures/igg_avatar.png
  *    produces:
  *      - application/json
  *    responses:
